<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button 
	    android:id="@+id/createdb"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/createdb"/>
	<Button 
	    android:id="@+id/updatedb"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/updatedb"/>
	<Button 
	    android:id="@+id/insert"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/insert"/>
	<Button 
	    android:id="@+id/update"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/update"/>
	<Button 
	    android:id="@+id/query"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/query"/>
</LinearLayout>
