<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/num1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number1" />
    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculat_4" />
    <EditText
        android:id="@+id/num2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number2" />
    <Button 
        android:id="@+id/factbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/factbutton"/>
</LinearLayout>
