<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/downloadtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <Button 
        android:id="@+id/downloadtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/downloadtext"/>
    <Button 
        android:id="@+id/downloadmp3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/downloadmp3"/>
    

</LinearLayout>
