<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <Button 
        android:id="@+id/registBroadcastRecevier3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registBroadcastRecevier3"/>
    <Button 
        android:id="@+id/unregistBroadcastRecevier3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unregistBroadcastRecevier3"/>

</LinearLayout>
